--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "tailwindcss": "^3.0.23",
-    "umi": "4.0.0-canary.20220316.1"
+    "umi": "4.0.15"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -21,6 +21,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "prisma": "^3.10.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "prettier": "^2",
+    "prettier-plugin-organize-imports": "^2",
+    "prettier-plugin-packagejson": "^2"
   }
 }
